[metadata]
name = oslo.ovsdb_frontend
summary = Frontend for managing OVS DB
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/oslo
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo_ovsdb_frontend

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo.ovsdb_frontend/locale
domain = oslo.ovsdb_frontend

[update_catalog]
domain = oslo.ovsdb_frontend
output_dir = oslo.ovsdb_frontend/locale
input_file = oslo.ovsdb_frontend/locale/oslo.ovsdb_frontend.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.ovsdb_frontend/locale/oslo.ovsdb_frontend.pot

[wheel]
universal = true
